reestructuro la carpeta code de la documentacion y escribo segunda seccion cap 5: prueba de que delay es una monada

--- a/doc/latex/Structures.tex
+++ b/doc/latex/Structures.tex
@@ -27,9 +27,16 @@
 \AgdaModule{Prod}\<%
 \end{code}
 
+\begin{code}%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{Monoid}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\end{code}
+
 %<*monoid>
 \begin{code}%
-\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\>[0][@{}l@{\AgdaIndent{1}}]%
+\>[2]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaRecord{Monoid}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -38,18 +45,18 @@
 \AgdaPrimitiveType{Set₁}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{constructor}\<%
-\\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaInductiveConstructor{makeMonoid}\<%
+\>[4]\AgdaKeyword{constructor}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaInductiveConstructor{makeMonoid}\<%
 \\
 %
-\>[2]\AgdaKeyword{field}\<%
+\>[4]\AgdaKeyword{field}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -57,19 +64,19 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[4]\AgdaField{eqₘ}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{eqₘ}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{IsEquivalence}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}\<%
 \\
 %
-\>[4]\AgdaField{zeroₘ}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{zeroₘ}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\<%
 \\
 %
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}+ₘ\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaOperator{\AgdaField{\AgdaUnderscore{}+ₘ\AgdaUnderscore{}}}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -77,8 +84,8 @@
 \AgdaBound{M}\<%
 \\
 %
-\>[4]\AgdaField{idl}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{idl}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -90,8 +97,8 @@
 \AgdaBound{x}\<%
 \\
 %
-\>[4]\AgdaField{idr}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{idr}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -103,8 +110,8 @@
 \AgdaBound{x}\<%
 \\
 %
-\>[4]\AgdaField{assoc}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{assoc}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -129,15 +136,23 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+%
+\>[2]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Monoid}\AgdaSpace{}%
 \AgdaKeyword{public}\<%
 \end{code}
 %</monoid>
 
+\begin{code}%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{Monad}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\end{code}
+
 %<*monad>
 \begin{code}%
-\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\>[0][@{}l@{\AgdaIndent{1}}]%
+\>[2]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaRecord{Monad}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -148,18 +163,18 @@
 \AgdaPrimitiveType{Set₁}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{constructor}\<%
-\\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaInductiveConstructor{makeMonad}\<%
+\>[4]\AgdaKeyword{constructor}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaInductiveConstructor{makeMonad}\<%
 \\
 %
-\>[2]\AgdaKeyword{field}\<%
+\>[4]\AgdaKeyword{field}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -172,8 +187,8 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[4]\AgdaField{eqₘ}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{eqₘ}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -182,8 +197,8 @@
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\})}\<%
 \\
 %
-\>[4]\AgdaField{return}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{return}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -195,8 +210,8 @@
 \AgdaBound{A}\<%
 \\
 %
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≫=\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≫=\AgdaUnderscore{}}}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -215,14 +230,14 @@
 \AgdaBound{B}\<%
 \\
 %
-\>[4]\AgdaField{law₁}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{law₁}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
-\>[129I]\AgdaSymbol{→}\AgdaSpace{}%
+\>[133I]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
@@ -233,8 +248,8 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
-\>[129I][@{}l@{\AgdaIndent{0}}]%
-\>[29]\AgdaSymbol{→}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[133I]%
+\>[30]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(((}\AgdaField{return}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
@@ -244,8 +259,8 @@
 \AgdaBound{x}\AgdaSymbol{))}\<%
 \\
 %
-\>[4]\AgdaField{law₂}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{law₂}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -261,14 +276,14 @@
 \AgdaBound{t}\<%
 \\
 %
-\>[4]\AgdaField{law₃}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{law₃}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[164I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[168I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -287,8 +302,8 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSymbol{)}\<%
 \\
-\>[164I][@{}l@{\AgdaIndent{0}}]%
-\>[28]\AgdaSymbol{→}\AgdaSpace{}%
+\>[168I][@{}l@{\AgdaIndent{0}}]%
+\>[30]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
@@ -307,15 +322,23 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+%
+\>[2]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Monad}\AgdaSpace{}%
 \AgdaKeyword{public}\<%
 \end{code}
 %</monad>
 
+\begin{code}%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{MonoidalFunctor}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\end{code}
+
 %<*monoidal>
 \begin{code}%
-\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\>[0][@{}l@{\AgdaIndent{1}}]%
+\>[2]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaRecord{MonoidalFunctor}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -326,18 +349,18 @@
 \AgdaPrimitiveType{Set₁}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{constructor}\<%
-\\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaInductiveConstructor{makeMonoidalFunctor}\<%
+\>[4]\AgdaKeyword{constructor}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaInductiveConstructor{makeMonoidalFunctor}\<%
 \\
 %
-\>[2]\AgdaKeyword{field}\<%
+\>[4]\AgdaKeyword{field}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -350,8 +373,8 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[4]\AgdaField{eqₘ}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{eqₘ}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -360,14 +383,14 @@
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\})}\<%
 \\
 %
-\>[4]\AgdaField{unit}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{unit}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaRecord{⊤}\<%
 \\
 %
-\>[4]\AgdaField{merge}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{merge}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -386,8 +409,8 @@
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
 %
-\>[4]\AgdaField{fmap}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{fmap}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -405,9 +428,9 @@
 \AgdaBound{B}\<%
 \\
 %
-\>[4]\AgdaField{idr}%
-\>[11]\AgdaSymbol{:}%
-\>[257I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[6]\AgdaField{idr}%
+\>[13]\AgdaSymbol{:}%
+\>[263I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -417,8 +440,8 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\<%
 \\
-\>[257I][@{}l@{\AgdaIndent{0}}]%
-\>[14]\AgdaSymbol{→}\AgdaSpace{}%
+\>[263I][@{}l@{\AgdaIndent{0}}]%
+\>[16]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaField{unit}\AgdaSymbol{)}\AgdaSpace{}%
@@ -433,9 +456,9 @@
 \AgdaBound{a}\AgdaSymbol{)}\<%
 \\
 %
-\>[4]\AgdaField{idl}%
-\>[11]\AgdaSymbol{:}%
-\>[278I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[6]\AgdaField{idl}%
+\>[13]\AgdaSymbol{:}%
+\>[284I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -445,8 +468,8 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
-\>[278I][@{}l@{\AgdaIndent{0}}]%
-\>[14]\AgdaSymbol{→}\AgdaSpace{}%
+\>[284I][@{}l@{\AgdaIndent{0}}]%
+\>[16]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaField{unit}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
@@ -461,9 +484,9 @@
 \AgdaBound{b}\AgdaSymbol{)}\<%
 \\
 %
-\>[4]\AgdaField{assoc}%
-\>[11]\AgdaSymbol{:}%
-\>[299I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[6]\AgdaField{assoc}%
+\>[13]\AgdaSymbol{:}%
+\>[305I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
@@ -483,8 +506,8 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSymbol{)}\<%
 \\
-\>[299I][@{}l@{\AgdaIndent{0}}]%
-\>[14]\AgdaSymbol{→}\AgdaSpace{}%
+\>[305I][@{}l@{\AgdaIndent{0}}]%
+\>[16]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{fmap}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaSymbol{\{((}\AgdaBound{a}\AgdaSpace{}%
@@ -497,15 +520,15 @@
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}%
-\>[330I]\AgdaBound{c}\AgdaSymbol{))\})}\AgdaSpace{}%
+\>[336I]\AgdaBound{c}\AgdaSymbol{))\})}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{))}\<%
 \\
-\>[330I][@{}l@{\AgdaIndent{0}}]%
-\>[56]\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
+\>[336I][@{}l@{\AgdaIndent{0}}]%
+\>[58]\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
@@ -513,22 +536,30 @@
 \AgdaBound{c}\AgdaSymbol{))}\<%
 \\
 %
-\>[4]\AgdaComment{-- comm : ∀ \{A B : Set\} → (a : M A) (b : M B) }\<%
+\>[6]\AgdaComment{-- comm : ∀ \{A B : Set\} → (a : M A) (b : M B) }\<%
 \\
 %
-\>[4]\AgdaComment{--          → merge a b ≅ₘ fmap swap (merge b a)}\<%
+\>[6]\AgdaComment{--          → merge a b ≅ₘ fmap swap (merge b a)}\<%
 \\
 \>[0]\<%
 \\
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+%
+\>[2]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{MonoidalFunctor}\AgdaSpace{}%
 \AgdaKeyword{public}\<%
 \end{code}
 %</monoidal>
 
+\begin{code}%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{ConcurrentMonoid}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\end{code}
+
 %<*monoidconc>
 \begin{code}%
-\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\>[0][@{}l@{\AgdaIndent{1}}]%
+\>[2]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaRecord{ConcurrentMonoid}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -537,18 +568,18 @@
 \AgdaPrimitiveType{Set₁}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{constructor}\<%
-\\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaInductiveConstructor{makeConcurrentMonoid}\<%
+\>[4]\AgdaKeyword{constructor}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaInductiveConstructor{makeConcurrentMonoid}\<%
 \\
 %
-\>[2]\AgdaKeyword{field}\<%
+\>[4]\AgdaKeyword{field}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -556,14 +587,14 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[4]\AgdaField{eqₘ}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{eqₘ}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{IsEquivalence}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}\<%
 \\
 %
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -571,20 +602,20 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[4]\AgdaField{porderₘ}\AgdaSpace{}%
+\>[6]\AgdaField{porderₘ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{IsPartialOrder}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}\<%
 \\
 %
-\>[4]\AgdaField{zeroₘ}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{zeroₘ}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\<%
 \\
 %
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}+ₘ\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaOperator{\AgdaField{\AgdaUnderscore{}+ₘ\AgdaUnderscore{}}}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -592,7 +623,7 @@
 \AgdaBound{M}\<%
 \\
 %
-\>[4]\AgdaField{scomp≲ₘ}\AgdaSpace{}%
+\>[6]\AgdaField{scomp≲ₘ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSpace{}%
@@ -618,8 +649,8 @@
 \AgdaBound{w}\AgdaSymbol{)}\<%
 \\
 %
-\>[4]\AgdaField{sidl}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{sidl}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -631,8 +662,8 @@
 \AgdaBound{x}\<%
 \\
 %
-\>[4]\AgdaField{sidr}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{sidr}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -644,8 +675,8 @@
 \AgdaBound{x}\<%
 \\
 %
-\>[4]\AgdaField{sassoc}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{sassoc}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -669,8 +700,8 @@
 \AgdaBound{z}\AgdaSymbol{)}\<%
 \\
 %
-\>[4]\AgdaField{maxₘ}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{maxₘ}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -678,7 +709,7 @@
 \AgdaBound{M}\<%
 \\
 %
-\>[4]\AgdaField{mcomp≲ₘ}\AgdaSpace{}%
+\>[6]\AgdaField{mcomp≲ₘ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSpace{}%
@@ -704,8 +735,8 @@
 \AgdaBound{w}\AgdaSymbol{)}\<%
 \\
 %
-\>[4]\AgdaField{midl}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{midl}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -717,8 +748,8 @@
 \AgdaBound{x}\<%
 \\
 %
-\>[4]\AgdaField{midr}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{midr}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -730,8 +761,8 @@
 \AgdaBound{x}\<%
 \\
 %
-\>[4]\AgdaField{massoc}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{massoc}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -755,8 +786,8 @@
 \AgdaBound{z}\AgdaSymbol{)))}\<%
 \\
 %
-\>[4]\AgdaField{mcomm}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{mcomm}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -771,9 +802,9 @@
 \AgdaBound{x}\AgdaSymbol{)}\<%
 \\
 %
-\>[4]\AgdaField{ichange}\AgdaSpace{}%
+\>[6]\AgdaField{ichange}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[514I]\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\>[522I]\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{y}\AgdaSpace{}%
@@ -786,8 +817,8 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\<%
 \\
-\>[514I][@{}l@{\AgdaIndent{0}}]%
-\>[16]\AgdaSymbol{→}\AgdaSpace{}%
+\>[522I][@{}l@{\AgdaIndent{0}}]%
+\>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
@@ -806,15 +837,23 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+%
+\>[2]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{ConcurrentMonoid}\AgdaSpace{}%
 \AgdaKeyword{public}\<%
 \end{code}
 %</monoidconc>
 
+\begin{code}%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{ConcurrentMonad}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\end{code}
+
 %<*monconc>
 \begin{code}%
-\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\>[0][@{}l@{\AgdaIndent{1}}]%
+\>[2]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaRecord{ConcurrentMonad}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -825,18 +864,18 @@
 \AgdaPrimitiveType{Set₁}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{constructor}\<%
-\\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaInductiveConstructor{makeConcurrentMonad}\<%
+\>[4]\AgdaKeyword{constructor}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaInductiveConstructor{makeConcurrentMonad}\<%
 \\
 %
-\>[2]\AgdaKeyword{field}\<%
+\>[4]\AgdaKeyword{field}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -849,8 +888,8 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[4]\AgdaField{eqₘ}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{eqₘ}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -859,8 +898,8 @@
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\})}\<%
 \\
 %
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -873,20 +912,20 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[4]\AgdaField{porderₘ}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{porderₘ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaRecord{IsPreorder}\AgdaSpace{}%
+\AgdaRecord{IsPartialOrder}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\})}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\})}\<%
 \\
 %
-\>[4]\AgdaField{return}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{return}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -898,8 +937,8 @@
 \AgdaBound{A}\<%
 \\
 %
-\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≫=\AgdaUnderscore{}}}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaOperator{\AgdaField{\AgdaUnderscore{}>>=\AgdaUnderscore{}}}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -907,46 +946,96 @@
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
-\AgdaBound{B}\<%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
 %
-\>[4]\AgdaField{monad₁}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[6]\AgdaField{comp≲ₘ}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}%
+\>[623I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a₁}\AgdaSpace{}%
+\AgdaBound{a₂}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{f₁}\AgdaSpace{}%
+\AgdaBound{f₂}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[623I]%
+\>[18]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{a₁}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaBound{a₂}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(∀}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{f₁}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{f₂}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a₁}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaBound{f₁}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a₂}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaBound{f₂}\AgdaSymbol{)}\<%
+\\
+%
+\>[6]\AgdaField{monad₁}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
+\>[668I]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[668I]%
+\>[30]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(((}\AgdaField{return}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{))}\<%
 \\
 %
-\>[4]\AgdaField{monad₂}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{monad₂}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -956,28 +1045,28 @@
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaField{return}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaBound{t}\<%
 \\
 %
-\>[4]\AgdaField{monad₃}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{monad₃}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[652I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[703I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{C}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
@@ -986,35 +1075,35 @@
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
-\AgdaBound{C}\AgdaSymbol{)}\<%
+\AgdaBound{A}\AgdaSymbol{)}\<%
 \\
-\>[652I][@{}l@{\AgdaIndent{0}}]%
-\>[29]\AgdaSymbol{→}\AgdaSpace{}%
+\>[703I][@{}l@{\AgdaIndent{0}}]%
+\>[30]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSymbol{))}\<%
 \\
 %
-\>[4]\AgdaField{unit}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{unit}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaRecord{⊤}\<%
 \\
 %
-\>[4]\AgdaField{merge}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{merge}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -1033,8 +1122,47 @@
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
 %
-\>[4]\AgdaField{idr}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{mcomp≲ₘ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}%
+\>[756I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a₁}\AgdaSpace{}%
+\AgdaBound{a₂}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{b₁}\AgdaSpace{}%
+\AgdaBound{b₂}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{a₁}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaBound{a₂}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{b₁}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaBound{b₂}\<%
+\\
+\>[.][@{}l@{}]\<[756I]%
+\>[18]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
+\AgdaBound{a₁}\AgdaSpace{}%
+\AgdaBound{b₁}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
+\AgdaBound{a₂}\AgdaSpace{}%
+\AgdaBound{b₂}\AgdaSymbol{)}\<%
+\\
+%
+\>[6]\AgdaField{idr}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1050,7 +1178,7 @@
 \AgdaField{unit}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -1060,8 +1188,8 @@
 \AgdaInductiveConstructor{tt}\AgdaSymbol{)))}\<%
 \\
 %
-\>[4]\AgdaField{idl}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[6]\AgdaField{idl}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1077,7 +1205,7 @@
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -1087,10 +1215,10 @@
 \AgdaBound{b}\AgdaSymbol{)))}\<%
 \\
 %
-\>[4]\AgdaField{assoc}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}%
-\>[750I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[6]\AgdaField{assoc}%
+\>[14]\AgdaSymbol{:}%
+\>[833I]\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1109,30 +1237,28 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[750I]%
+\>[833I][@{}l@{\AgdaIndent{0}}]%
 \>[17]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaSymbol{\{((}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}%
-\>[781I]\AgdaField{return}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaField{return}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{c}\AgdaSymbol{))\}))}\<%
-\\
-\>[.][@{}l@{}]\<[781I]%
-\>[65]\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSymbol{))\}))}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
@@ -1140,10 +1266,46 @@
 \AgdaBound{c}\AgdaSymbol{))}\<%
 \\
 %
-\>[4]\AgdaField{ichange}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}%
-\>[793I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[6]\AgdaField{comm}%
+\>[14]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
+\AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
+\AgdaBound{b}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
+\AgdaSymbol{(λ}\AgdaSpace{}%
+\AgdaSymbol{\{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaField{return}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSymbol{)\}))}\<%
+\\
+%
+\>[6]\AgdaField{ichange}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[910I]\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaBound{D}\AgdaSpace{}%
@@ -1171,22 +1333,20 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{D}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[793I]%
+\>[910I][@{}l@{\AgdaIndent{0}}]%
 \>[17]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaField{merge}%
-\>[821I]\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSymbol{))}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≲ₘ}}\<%
-\\
-\>[821I][@{}l@{\AgdaIndent{0}}]%
-\>[27]\AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
@@ -1202,7 +1362,8 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+%
+\>[2]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{ConcurrentMonad}\AgdaSpace{}%
 \AgdaKeyword{public}\<%
 \end{code}
