--- a/doc/tex/titlepage.tex
+++ b/doc/tex/titlepage.tex
@@ -60,12 +60,12 @@ Delay}} % Título
 	
     {\itshape\LARGE Rivas, Exequiel}
 
-	\vspace*{6\baselineskip} %Espacio pre imagen
+	\vspace*{7\baselineskip} %Espacio pre imagen
     
     %Imagen
     \begin{figure}[h] %El h es para que quede en el lugar
 	\centering
-	\includegraphics[width=0.4\linewidth]{img/FCEIA.jpeg} \hfill \includegraphics[width=0.4\linewidth]{img/UNR.png}
+	\includegraphics[height=4\baselineskip]{img/UNR.png} \hfill \includegraphics[height=3.7\baselineskip]{img/FCEIA.png} 
 	\end{figure}
     
     \vfill % Espacio
